fix input font size on media575, remove shifting for icon on search menu

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -1,9 +1,11 @@
 .app-search {
     position: relative;
     flex: 1 0 auto;
+
     @media(max-width: 575px) {
         flex: 0 1 auto;
     }
+
     &__icon {
         display: flex;
         justify-content: center;
@@ -17,28 +19,30 @@
         background-color: transparent;
         transition: .2s all;
         cursor: pointer;
+
         &:hover {
             transform: scale(1.1);
         }
+
         img {
             width: 75%;
             height: 75%;
             object-fit: cover;
         }
-        @media(max-width: 575px) {
-            top: 5px;
-        }
     }
+
     &__input {
         width: 100%;
         padding: 10px 45px;
         font-size: 18px;
         border: none;
         border-radius: 5px;
+
         @media(max-width: 575px) {
-            font-size: 16px;
+            font-size: 14px;
         }
     }
+
     &__modal {
         display: flex;
         flex-direction: column;
@@ -47,18 +51,22 @@
         overflow-y: scroll;
         background-color: #fff;
     }
+
     &__item {
         padding: 5px;
         color: #000;
+
         &:hover {
             background-color: rgb(58, 58, 255);
             color: #fff;
         }
     }
+
     &__link {
         text-decoration: none;
         color: inherit;
     }
+
     &__error {
         color: rgb(255, 131, 131);
     }
